kubernetes/apps/storage/longhorn/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
  namespace: storage
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Longhorn
    gethomepage.dev/group: Storage
    gethomepage.dev/icon: longhorn.png
spec:
  parentRefs:
    - name: internal
      namespace: networking
      sectionName: https
  hostnames:
    - "longhorn.${SECRET_DOMAIN}"
  rules:
    - backendRefs:
        - name: longhorn-frontend
          port: 80
